--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ description = "CLI tool for converting PDF documents to Markdown or HTML using M
 readme = { file = "README.md", content-type = "text/markdown" }
 requires-python = ">=3.10"
 dynamic = ["version"]
-license = { file = "LICENSE" }
+license = "MIT"
+license-files = ["LICENSE"]
 dependencies = [
   "markdown",
   "mistralai",
@@ -23,7 +24,6 @@ emx-mistral-ocr-cli = "mistral_ocr_cli:main"
 
 [tool.setuptools]
 py-modules = ["mistral_ocr_cli"]
-license-files = ["LICENSE"]
 
 [tool.setuptools_scm]
 local_scheme = "no-local-version"
